# snapblaster2

./: .nojekyll  Cargo.toml  IMPLEMENTATION_GUIDE.md  Launchpad.html  README.md  index.html  robots.txt  search.json  sitemap.xml
.github/workflows/: build.yml
docs/: Launchpad.md  _quarto.yml  index.qmd
notes/: AI_feature.md  Roadmap.md
pages/: param_edit.html  project.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  events.rs  lib.rs  link.rs  main.rs  model.rs  morph.rs  storage.rs
src-tauri/src/midi/: controller.rs  manager.rs  mod.rs  service.rs
src-tauri/src/midi/controllers/: apc_mini.rs  generic.rs  launchpad_mini.rs  launchpad_x.rs  mod.rs  push_2.rs
src-ui/: config.js  debug.js  events.js  grid.js  index.html  link.js  main.js  notification.css  parameters.js  state.js  styles.css  tauri-api.js  views.js
src-ui/views/: config.js  snap.js
tickets/: 1-colour_scheme.md
