[package]
name = "snapblaster"
version = "0.1.0"
description = "A Tauri App"
authors = ["Joe Frost"]
license = "Commercial"
repository = ""
default-run = "snapblaster"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.2", features = ["api-all"] }
tokio = { version = "1.33", features = ["full"] }
# MIDI support
midir = "0.10.1"
wmidi = "4.0"
ableton-link = "0.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = "0.11.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
reqwest = "0.12.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
default = ["custom-protocol"]

pro = []
